@@ -1,3 +1,3 @@
-# This is the logfile group configuration file for LogWatch
+# This is the logfile group configuration file for Logwatch
 LogFile = messages
 
