@@ -1,4 +1,4 @@
-# This is the service filter configuration file for LogWatch
+# This is the service filter configuration file for Logwatch
 Title = "seaudit-report"
 
 # Which logfile group...
